--- a/index.html
+++ b/index.html
@@ -3,30 +3,30 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Panorama with Ghost & Phone</title>
+<title>Panorama: Ghost in Scene (Decoupled from View)</title>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css">
 <style>
   html,body{height:100%;margin:0;background:#000}
   #panorama{position:fixed;inset:0}
 
-  .ghost{
-    position:fixed;top:50%;left:50%;
-    width:clamp(200px, 30vmin, 600px);
-    transform:translate(-50%,-50%);
-    pointer-events:none;z-index:30;opacity:.85;
-    filter:drop-shadow(0 10px 22px rgba(0,0,0,.55));
-    animation: floatAround 40s linear infinite alternate;
-    animation-play-state: paused;
+  /* Pannellum hotspot 的外層容器會由程式動態加入 .ghost-hs */
+  .ghost-hs {
+    pointer-events: none;             /* 不阻擋操作 */
+    transform: translate(-50%, -50%); /* 以中心對準投影點 */
+    z-index: 30;
   }
-  @keyframes floatAround {
-    0%   { transform: translate(-50%, -50%) translate(10vw, 10vh) scale(1) rotate(0deg); opacity:0.95; }
-    25%  { transform: translate(-50%, -50%) translate(70vw, 15vh) scale(1.05) rotate(3deg); opacity:0.8; }
-    50%  { transform: translate(-50%, -50%) translate(60vw, 70vh) scale(1.1) rotate(-4deg); opacity:0.9; }
-    75%  { transform: translate(-50%, -50%) translate(20vw, 80vh) scale(1.08) rotate(2deg); opacity:0.85; }
-    100% { transform: translate(-50%, -50%) translate(10vw, 10vh) scale(1) rotate(0deg); opacity:0.95; }
+  /* 真正的幽靈圖 */
+  .ghost-img {
+    width: clamp(220px, 32vmin, 640px);  /* 比前一版再大一些 */
+    filter: drop-shadow(0 10px 22px rgba(0,0,0,.55));
+    opacity: .88;
+    user-select: none;
+    -webkit-user-drag: none;
+    pointer-events: none;
   }
 
+  /* 手持手機：佔畫面 70%，固定底部中央 */
   .holding-phone{
     position:fixed;left:50%;bottom:0;transform:translateX(-50%);
     height:70vh;width:auto;pointer-events:none;z-index:25;
@@ -39,6 +39,7 @@
     z-index:5;pointer-events:none;text-shadow:0 2px 6px rgba(0,0,0,.6);
   }
 
+  /* 起始指引覆蓋層 */
   .intro{
     position:fixed;inset:0;background:rgba(0,0,0,.6);
     display:grid;place-items:center;z-index:100;
@@ -55,6 +56,7 @@
     background:#22c55e;color:#0b1220;font-weight:700;cursor:pointer;
   }
 
+  /* 結束按鈕（音檔播完出現） */
   .end-wrap{
     position:fixed;inset:0;display:none;place-items:center;z-index:110;
     background:rgba(0,0,0,.45);
@@ -63,6 +65,7 @@
   .end-btn{
     padding:1rem 1.3rem;border:0;border-radius:12px;background:#38bdf8;color:#0b1220;font-weight:800;cursor:pointer;
     box-shadow:0 10px 28px rgba(0,0,0,.45);
+    text-decoration:none;
   }
 </style>
 </head>
@@ -71,6 +74,7 @@
 <div id="panorama"></div>
 <div class="loading" id="loading">載入全景中…</div>
 
+<!-- 起始指引 -->
 <div class="intro" id="intro">
   <div class="intro-card">
     <h2>拖曳螢幕，將手機對著女人，聽完對話。<br>Drag the screen, aim the phone at the woman, and listen to the conversation.</h2>
@@ -79,18 +83,20 @@
   </div>
 </div>
 
+<!-- 播畢出現 -->
 <div class="end-wrap" id="endWrap">
-  <!-- fallback link + button -->
+  <!-- 1) 先用 <a target="_top"> 做無JS也能用的基本版 -->
   <a id="fallbackLink" class="end-btn" href="https://ths.li/nNKw9mg" target="_top" rel="noopener">
     去榕樹洞 / Go to the banyan tree hollow
   </a>
 </div>
 
+<!-- 前景固定的手機 -->
 <img src="holdingphone.png" alt="" class="holding-phone" id="holdingPhone" />
-<img src="ghost.png" alt="" class="ghost" id="ghost" />
 
 <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
 <script>
+  /* ========= 1) 建立全景 ========= */
   const viewer = pannellum.viewer('panorama', {
     type: 'equirectangular',
     panorama: 'panorama.jpg',
@@ -105,9 +111,91 @@
     if (loading) loading.style.display = 'none';
   });
 
+  /* ========= 2) 建立「幽靈」熱點（在全景座標內移動） ========= */
+  // 初始方位（yaw: -180~180；pitch: -90~90）
+  let gyaw = 0, gpitch = 0;
+
+  // 用 createTooltip 自訂內容：放一張 ghost.png
+  viewer.addHotSpot({
+    id: 'ghostHS',
+    pitch: gpitch,
+    yaw: gyaw,
+    cssClass: 'ghost-hs',
+    createTooltip: function (hotSpotDiv, args) {
+      const img = document.createElement('img');
+      img.src = 'ghost.png';
+      img.className = 'ghost-img';
+      hotSpotDiv.appendChild(img);
+      // 保存 DOM 以供碰撞用
+      hotSpotDiv.dataset.ghost = '1';
+    }
+  });
+
+  // 快捷取得 ghost 熱點 DOM（會由 pannellum 動態生成）
+  function getGhostElement() {
+    return document.querySelector('.ghost-hs');
+  }
+
+  /* ========= 3) 幽靈在場景內均速亂走 ========= */
+  const SPEED_DEG_PER_SEC = 12; // 均速（每秒移動的角度量，越小越慢）
+  const MIN_PITCH = -35, MAX_PITCH = 35; // 限制幽靈上下範圍，避免跑太高或太低
+
+  // 角度運算工具（處理 -180~180 包裝）
+  function wrapYaw(deg) {
+    let d = deg;
+    while (d > 180) d -= 360;
+    while (d < -180) d += 360;
+    return d;
+  }
+  function clamp(v, min, max){ return Math.max(min, Math.min(max, v)); }
+  function shortestDelta(a, b) { // a->b 的最短角度差（含符號）
+    let d = wrapYaw(b - a);
+    return d;
+  }
+
+  // 隨機下一個目標點
+  function randomTarget() {
+    const targetYaw = wrapYaw(Math.random() * 360 - 180);
+    const targetPitch = clamp((Math.random() * (MAX_PITCH - MIN_PITCH)) + MIN_PITCH, MIN_PITCH, MAX_PITCH);
+    return { targetYaw, targetPitch };
+  }
+
+  let target = randomTarget();
+  let moving = false;
+  let lastT = performance.now();
+
+  function moveGhostRAF(t) {
+    if (!moving) return;
+
+    const dt = (t - lastT) / 1000; // 秒
+    lastT = t;
+
+    // 朝目標以均速逼近
+    const dy = shortestDelta(gyaw, target.targetYaw);
+    const dp = target.targetPitch - gpitch;
+
+    const dist = Math.hypot(dy, dp);
+    const step = SPEED_DEG_PER_SEC * dt;
+
+    if (dist <= step) {
+      // 抵達：設定新目標
+      gyaw = wrapYaw(target.targetYaw);
+      gpitch = clamp(target.targetPitch, MIN_PITCH, MAX_PITCH);
+      viewer.updateHotSpot('ghostHS', { yaw: gyaw, pitch: gpitch });
+      target = randomTarget();
+    } else {
+      // 比例前進
+      gyaw = wrapYaw(gyaw + (dy / dist) * step);
+      gpitch = clamp(gpitch + (dp / dist) * step, MIN_PITCH, MAX_PITCH);
+      viewer.updateHotSpot('ghostHS', { yaw: gyaw, pitch: gpitch });
+    }
+
+    requestAnimationFrame(moveGhostRAF);
+  }
+
+  /* ========= 4) 互動流程：起始→碰撞即播→播畢顯示按鈕 ========= */
   const intro = document.getElementById('intro');
   const startBtn = document.getElementById('startBtn');
-  const ghost = document.getElementById('ghost');
   const holding = document.getElementById('holdingPhone');
   const endWrap = document.getElementById('endWrap');
   const fallbackLink = document.getElementById('fallbackLink');
@@ -120,7 +208,13 @@
 
   startBtn.addEventListener('click', () => {
     intro.style.display = 'none';
-    ghost.style.animationPlayState = 'running';
+    // 啟動幽靈移動（與視角脫鉤）
+    if (!moving) {
+      moving = true;
+      lastT = performance.now();
+      requestAnimationFrame(moveGhostRAF);
+    }
+    // 啟動碰撞偵測
     monitoring = true;
     requestAnimationFrame(tick);
   });
@@ -129,7 +223,7 @@
     endWrap.style.display = 'grid';
   });
 
-  // 完成後導向網址（含 sandbox fallback）
+  // 連結到榕樹洞（以你提供的「整頁取代」法）
   (function(){
     const targetURL = "https://ths.li/nNKw9mg";
     function replaceTop(url){
@@ -147,24 +241,31 @@
     });
   })();
 
+  /* ========= 5) 碰撞偵測：手機「上緣」是否掃到幽靈投影 ========= */
   function tick(){
     if (!monitoring) return;
-    const gRect = ghost.getBoundingClientRect();
-    const pRect = holding.getBoundingClientRect();
-    const phoneTop = pRect.top;
-    const horizontalOverlap = !(pRect.right < gRect.left || pRect.left > gRect.right);
-    const topHitsGhost = phoneTop <= gRect.bottom && phoneTop >= gRect.top;
-    const isColliding = horizontalOverlap && topHitsGhost;
 
-    if (isColliding) {
-      if (audio.paused && !audio.ended) {
-        audio.play().catch(()=>{});
-      }
-    } else {
-      if (!audio.paused && !audio.ended) {
-        audio.pause();
+    const ghostEl = getGhostElement(); // pannellum 生成的 hotspot DOM
+    if (ghostEl) {
+      const gRect = ghostEl.getBoundingClientRect();
+      const pRect = holding.getBoundingClientRect();
+      const phoneTop = pRect.top;
+
+      const horizontalOverlap = !(pRect.right < gRect.left || pRect.left > gRect.right);
+      const topHitsGhost = phoneTop <= gRect.bottom && phoneTop >= gRect.top;
+      const isColliding = horizontalOverlap && topHitsGhost;
+
+      if (isColliding) {
+        if (audio.paused && !audio.ended) {
+          audio.play().catch(()=>{});
+        }
+      } else {
+        if (!audio.paused && !audio.ended) {
+          audio.pause();
+        }
       }
     }
+
     requestAnimationFrame(tick);
   }
 </script>
