--- a/index.html
+++ b/index.html
@@ -10,23 +10,20 @@
   html,body{height:100%;margin:0;background:#000}
   #panorama{position:fixed;inset:0}
 
-  /* Pannellum hotspot 的外層容器會由程式動態加入 .ghost-hs */
-  .ghost-hs {
-    pointer-events: none;             /* 不阻擋操作 */
-    transform: translate(-50%, -50%); /* 以中心對準投影點 */
-    z-index: 30;
+  /* hotspot 外層（由 pannellum 建） */
+  .ghost-hs{
+    pointer-events:none;
+    transform:translate(-50%,-50%); /* 以中心對準投影點 */
+    z-index:30;
   }
-  /* 真正的幽靈圖 */
-  .ghost-img {
-    width: clamp(220px, 32vmin, 640px);  /* 比前一版再大一些 */
-    filter: drop-shadow(0 10px 22px rgba(0,0,0,.55));
-    opacity: .88;
-    user-select: none;
-    -webkit-user-drag: none;
-    pointer-events: none;
+  .ghost-img{
+    width:clamp(220px, 32vmin, 640px);
+    filter:drop-shadow(0 10px 22px rgba(0,0,0,.55));
+    opacity:.88;
+    user-select:none;-webkit-user-drag:none;pointer-events:none;
   }
 
-  /* 手持手機：佔畫面 70%，固定底部中央 */
+  /* 手持手機（固定前景） */
   .holding-phone{
     position:fixed;left:50%;bottom:0;transform:translateX(-50%);
     height:70vh;width:auto;pointer-events:none;z-index:25;
@@ -39,7 +36,7 @@
     z-index:5;pointer-events:none;text-shadow:0 2px 6px rgba(0,0,0,.6);
   }
 
-  /* 起始指引覆蓋層 */
+  /* 起始指南覆蓋層 */
   .intro{
     position:fixed;inset:0;background:rgba(0,0,0,.6);
     display:grid;place-items:center;z-index:100;
@@ -79,7 +76,7 @@
   <div class="intro-card">
     <h2>拖曳螢幕，將手機對著女人，聽完對話。<br>Drag the screen, aim the phone at the woman, and listen to the conversation.</h2>
     <p>按下按鈕後開始偵測與播放。/ Start detection and audio after you press the button.</p>
-    <button class="btn" id="startBtn">知道了！ / Got it!</button>
+    <button class="btn" id="startBtn" type="button">知道了！ / Got it!</button>
   </div>
 </div>
 
@@ -106,94 +103,89 @@
     backgroundColor: [0,0,0]
   });
 
+  const loading = document.getElementById('loading');
   viewer.on('load', () => {
-    const loading = document.getElementById('loading');
     if (loading) loading.style.display = 'none';
+    setupGhostHotspot(); // **等 panorama 載入好才建立幽靈**
   });
 
-  /* ========= 2) 建立「幽靈」熱點（在全景座標內移動） ========= */
-  // 初始方位（yaw: -180~180；pitch: -90~90）
+  /* ========= 2) 建立「幽靈」熱點 ========= */
   let gyaw = 0, gpitch = 0;
+  let ghostReady = false;
 
-  // 用 createTooltip 自訂內容：放一張 ghost.png
-  viewer.addHotSpot({
-    id: 'ghostHS',
-    pitch: gpitch,
-    yaw: gyaw,
-    cssClass: 'ghost-hs',
-    createTooltip: function (hotSpotDiv, args) {
-      const img = document.createElement('img');
-      img.src = 'ghost.png';
-      img.className = 'ghost-img';
-      hotSpotDiv.appendChild(img);
-      // 保存 DOM 以供碰撞用
-      hotSpotDiv.dataset.ghost = '1';
-    }
-  });
+  function setupGhostHotspot(){
+    // 初始位置可調整
+    gyaw = 0;
+    gpitch = 0;
 
-  // 快捷取得 ghost 熱點 DOM（會由 pannellum 動態生成）
+    viewer.addHotSpot({
+      id: 'ghostHS',
+      pitch: gpitch,
+      yaw: gyaw,
+      cssClass: 'ghost-hs',
+      // 正確名稱：createTooltipFunc / createTooltipArgs
+      createTooltipFunc: function (hotSpotDiv, args) {
+        const img = document.createElement('img');
+        img.src = 'ghost.png';
+        img.className = 'ghost-img';
+        hotSpotDiv.appendChild(img);
+        ghostReady = true;
+      },
+      createTooltipArgs: {}
+    });
+  }
+
   function getGhostElement() {
     return document.querySelector('.ghost-hs');
   }
 
   /* ========= 3) 幽靈在場景內均速亂走 ========= */
-  const SPEED_DEG_PER_SEC = 12; // 均速（每秒移動的角度量，越小越慢）
-  const MIN_PITCH = -35, MAX_PITCH = 35; // 限制幽靈上下範圍，避免跑太高或太低
+  const SPEED_DEG_PER_SEC = 12; // 均速（角速度）
+  const MIN_PITCH = -35, MAX_PITCH = 35;
 
-  // 角度運算工具（處理 -180~180 包裝）
-  function wrapYaw(deg) {
-    let d = deg;
-    while (d > 180) d -= 360;
-    while (d < -180) d += 360;
-    return d;
-  }
-  function clamp(v, min, max){ return Math.max(min, Math.min(max, v)); }
-  function shortestDelta(a, b) { // a->b 的最短角度差（含符號）
-    let d = wrapYaw(b - a);
-    return d;
+  function wrapYaw(deg){ let d=deg; while(d>180) d-=360; while(d<-180) d+=360; return d; }
+  function clamp(v,min,max){ return Math.max(min, Math.min(max, v)); }
+  function shortestDelta(a,b){ return wrapYaw(b-a); }
+
+  function randomTarget(){
+    const targetYaw = wrapYaw(Math.random()*360 - 180);
+    const targetPitch = clamp((Math.random()*(MAX_PITCH-MIN_PITCH))+MIN_PITCH, MIN_PITCH, MAX_PITCH);
+    return {targetYaw, targetPitch};
   }
 
-  // 隨機下一個目標點
-  function randomTarget() {
-    const targetYaw = wrapYaw(Math.random() * 360 - 180);
-    const targetPitch = clamp((Math.random() * (MAX_PITCH - MIN_PITCH)) + MIN_PITCH, MIN_PITCH, MAX_PITCH);
-    return { targetYaw, targetPitch };
-  }
-
-  let target = randomTarget();
+  let target = null;
   let moving = false;
-  let lastT = performance.now();
+  let lastT = 0;
 
-  function moveGhostRAF(t) {
+  function moveGhostRAF(t){
     if (!moving) return;
-
-    const dt = (t - lastT) / 1000; // 秒
+    const dt = (t - lastT)/1000;
     lastT = t;
 
-    // 朝目標以均速逼近
+    // 若還沒準備好 DOM，就等一下
+    if (!ghostReady) { requestAnimationFrame(moveGhostRAF); return; }
+    if (!target) target = randomTarget();
+
     const dy = shortestDelta(gyaw, target.targetYaw);
     const dp = target.targetPitch - gpitch;
-
     const dist = Math.hypot(dy, dp);
     const step = SPEED_DEG_PER_SEC * dt;
 
     if (dist <= step) {
-      // 抵達：設定新目標
       gyaw = wrapYaw(target.targetYaw);
       gpitch = clamp(target.targetPitch, MIN_PITCH, MAX_PITCH);
       viewer.updateHotSpot('ghostHS', { yaw: gyaw, pitch: gpitch });
       target = randomTarget();
     } else {
-      // 比例前進
-      gyaw = wrapYaw(gyaw + (dy / dist) * step);
-      gpitch = clamp(gpitch + (dp / dist) * step, MIN_PITCH, MAX_PITCH);
+      gyaw = wrapYaw(gyaw + (dy/dist)*step);
+      gpitch = clamp(gpitch + (dp/dist)*step, MIN_PITCH, MAX_PITCH);
       viewer.updateHotSpot('ghostHS', { yaw: gyaw, pitch: gpitch });
     }
 
     requestAnimationFrame(moveGhostRAF);
   }
 
-  /* ========= 4) 互動流程：起始→碰撞即播→播畢顯示按鈕 ========= */
+  /* ========= 4) 互動流程 ========= */
   const intro = document.getElementById('intro');
   const startBtn = document.getElementById('startBtn');
   const holding = document.getElementById('holdingPhone');
@@ -207,14 +199,15 @@
   let monitoring = false;
 
   startBtn.addEventListener('click', () => {
+    // 隱藏導引
     intro.style.display = 'none';
-    // 啟動幽靈移動（與視角脫鉤）
-    if (!moving) {
-      moving = true;
-      lastT = performance.now();
-      requestAnimationFrame(moveGhostRAF);
-    }
-    // 啟動碰撞偵測
+
+    // 啟動幽靈移動（確保已建立 hotspot）
+    moving = true;
+    lastT = performance.now();
+    requestAnimationFrame(moveGhostRAF);
+
+    // 啟動碰撞偵測（若幽靈 DOM 還沒好，tick 內會等待）
     monitoring = true;
     requestAnimationFrame(tick);
   });
@@ -223,7 +216,7 @@
     endWrap.style.display = 'grid';
   });
 
-  // 連結到榕樹洞（以你提供的「整頁取代」法）
+  // 你的指定導向法
   (function(){
     const targetURL = "https://ths.li/nNKw9mg";
     function replaceTop(url){
@@ -241,11 +234,11 @@
     });
   })();
 
-  /* ========= 5) 碰撞偵測：手機「上緣」是否掃到幽靈投影 ========= */
+  /* ========= 5) 碰撞偵測（手機上緣掃到幽靈） ========= */
   function tick(){
     if (!monitoring) return;
 
-    const ghostEl = getGhostElement(); // pannellum 生成的 hotspot DOM
+    const ghostEl = getGhostElement();
     if (ghostEl) {
       const gRect = ghostEl.getBoundingClientRect();
       const pRect = holding.getBoundingClientRect();
@@ -265,7 +258,6 @@
         }
       }
     }
-
     requestAnimationFrame(tick);
   }
 </script>
